# nbd-3dge

./: .clang-format  .dir-locals.el  .dir-locals.el.in  .gitattributes  .gitignore  .projectile  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  config.h.in  config.ini.in  config.xml  install-dependencies.py  install-dependencies.sh
cmake_modules/: FindSFML.cmake
data/: Makefile  ReadMe.txt  assets.json  assets.xml  brdfLUT.ktx  compress.sh  config.xml  materials.mtl  scene.json  scene.xml  ubuntu.fnt  untitled.gltf
data/Stone_Wall_004/: disp.tiff
data/palm_tree_v2/: specular.tga
shaders/: aabb.frag  aabb.geom  aabb.vert  default.frag  default.vert  font.frag  font.vert  frustum.geom  light.frag  light.vert  lightAndTex.frag  lightAndTex.vert  lightAndTex3.frag  lightAndTex3.vert  normals.frag  normals.geom  normals.vert  pbr.frag  pbr.vert  shader.frag  shader.vert  shadow.frag  skybox.frag  skybox.vert  terrain.frag  terrain.vert
src/: Aabb.h  Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.h  Components.h  Engine.cpp  Engine.h  Font.cpp  Font.h  FontLoader.cpp  FontLoader.h  FpsCounter.cpp  FpsCounter.h  Framebuffer.cpp  Framebuffer.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameCore.cpp  GameCore.h  GameLogic.cpp  GameLogic.h  GameObjectManager.cpp  GameObjectManager.h  GameView.h  GfxNode.cpp  GfxNode.h  GfxScene.cpp  GfxScene.h  Heightfield.h  InputSystem.cpp  InputSystem.h  (+80 more)
src/gfx/: Aabb.h  Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Macros.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skin.cpp  Skin.h  Skybox.cpp  Skybox.h  Text.cpp  Text.h  Texture.cpp  Texture.h
src/loaders/: FontLoader.cpp  FontLoader.h  GltfLoader.cpp  GltfLoader.h  Loader.cpp  MaterialData.h  MeshData.cpp  MtlLoader.cpp  MtlLoader.h  ObjLoader.cpp  ObjLoader.h  TextureData.h
tests/: CMakeLists.txt  MaterialData_test.cpp  MtlLoader_test.cpp
